src/gen/grammers/MiniFlaskParser.java
// Generated from C:/Users/Dell/IdeaProjects/Compiler/src/grammers/MiniFlaskParser.g4 by ANTLR 4.13.1
package gen.grammers;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MiniFlaskParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEF=1, IF=2, RETURN=3, APP=4, ROUTE=5, GET=6, POST=7, FOR=8, IN=9, FROM=10, 
		IMPORT=11, NONE=12, TRUE=13, FALSE=14, STRING=15, NUMBER=16, IDENT=17, 
		AT=18, DOT=19, LPAREN=20, RPAREN=21, LBRACK=22, RBRACK=23, LBRACE=24, 
		RBRACE=25, COMMA=26, COLON=27, EQUALS=28, PLUS=29, STAR=30, DOUBLESTAR=31, 
		EQEQ=32, COMMENT=33, WS=34, NEWLINE=35;
	public static final int
		RULE_file = 0, RULE_statement = 1, RULE_importStmt = 2, RULE_importNames = 3, 
		RULE_routeDef = 4, RULE_routeMethod = 5, RULE_routeArgs = 6, RULE_routeArg = 7, 
		RULE_funcDef = 8, RULE_params = 9, RULE_param = 10, RULE_simpleParam = 11, 
		RULE_defaultParam = 12, RULE_typeAnnotatedParam = 13, RULE_typeAnnotatedDefaultParam = 14, 
		RULE_starParam = 15, RULE_doubleStarParam = 16, RULE_typeExpr = 17, RULE_assign = 18, 
		RULE_ifStmt = 19, RULE_returnStmt = 20, RULE_exprStmt = 21, RULE_expr = 22, 
		RULE_additive = 23, RULE_primary = 24, RULE_suffix = 25, RULE_routeArgKws = 26, 
		RULE_arg = 27, RULE_atom = 28, RULE_listLiteral = 29, RULE_dictLiteral = 30, 
		RULE_pair = 31, RULE_genExpr = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "statement", "importStmt", "importNames", "routeDef", "routeMethod", 
			"routeArgs", "routeArg", "funcDef", "params", "param", "simpleParam", 
			"defaultParam", "typeAnnotatedParam", "typeAnnotatedDefaultParam", "starParam", 
			"doubleStarParam", "typeExpr", "assign", "ifStmt", "returnStmt", "exprStmt", 
			"expr", "additive", "primary", "suffix", "routeArgKws", "arg", "atom", 
			"listLiteral", "dictLiteral", "pair", "genExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'if'", "'return'", "'app'", "'route'", "'get'", "'post'", 
			"'for'", "'in'", "'from'", "'import'", "'None'", "'True'", "'False'", 
			null, null, null, "'@'", "'.'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
			"','", "':'", "'='", "'+'", "'*'", "'**'", "'=='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEF", "IF", "RETURN", "APP", "ROUTE", "GET", "POST", "FOR", "IN", 
			"FROM", "IMPORT", "NONE", "TRUE", "FALSE", "STRING", "NUMBER", "IDENT", 
			"AT", "DOT", "LPAREN", "RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", 
			"COMMA", "COLON", "EQUALS", "PLUS", "STAR", "DOUBLESTAR", "EQEQ", "COMMENT", 
			"WS", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniFlaskParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniFlaskParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MiniFlaskParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(MiniFlaskParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MiniFlaskParser.NEWLINE, i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 34382281758L) != 0)) {
				{
				setState(71);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(66);
					statement();
					}
					break;
				case 2:
					{
					setState(67);
					statement();
					setState(68);
					match(NEWLINE);
					}
					break;
				case 3:
					{
					setState(70);
					match(NEWLINE);
					}
					break;
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(76);
			match(EOF);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NEWLINE) {
				{
				{
				setState(77);
				match(NEWLINE);
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskAssignStmtContext extends StatementContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public FlaskAssignStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterFlaskAssignStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitFlaskAssignStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitFlaskAssignStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskRouteDefStmtContext extends StatementContext {
		public RouteDefContext routeDef() {
			return getRuleContext(RouteDefContext.class,0);
		}
		public FlaskRouteDefStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterFlaskRouteDefStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitFlaskRouteDefStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitFlaskRouteDefStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskFuncDefStmtContext extends StatementContext {
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public FlaskFuncDefStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterFlaskFuncDefStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitFlaskFuncDefStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitFlaskFuncDefStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskIfStmtContext extends StatementContext {
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public FlaskIfStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterFlaskIfStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitFlaskIfStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitFlaskIfStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskReturnStmtContext extends StatementContext {
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public FlaskReturnStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterFlaskReturnStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitFlaskReturnStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitFlaskReturnStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskImportStmtContext extends StatementContext {
		public ImportStmtContext importStmt() {
			return getRuleContext(ImportStmtContext.class,0);
		}
		public FlaskImportStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterFlaskImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitFlaskImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitFlaskImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskExprStmtContext extends StatementContext {
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public FlaskExprStmtContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterFlaskExprStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitFlaskExprStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitFlaskExprStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new FlaskImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(83);
				importStmt();
				}
				break;
			case 2:
				_localctx = new FlaskRouteDefStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(84);
				routeDef();
				}
				break;
			case 3:
				_localctx = new FlaskFuncDefStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(85);
				funcDef();
				}
				break;
			case 4:
				_localctx = new FlaskAssignStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(86);
				assign();
				}
				break;
			case 5:
				_localctx = new FlaskIfStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(87);
				ifStmt();
				}
				break;
			case 6:
				_localctx = new FlaskReturnStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(88);
				returnStmt();
				}
				break;
			case 7:
				_localctx = new FlaskExprStmtContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(89);
				exprStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends ParserRuleContext {
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
	 
		public ImportStmtContext() { }
		public void copyFrom(ImportStmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskFromImportStmtContext extends ImportStmtContext {
		public TerminalNode FROM() { return getToken(MiniFlaskParser.FROM, 0); }
		public TerminalNode IDENT() { return getToken(MiniFlaskParser.IDENT, 0); }
		public TerminalNode IMPORT() { return getToken(MiniFlaskParser.IMPORT, 0); }
		public ImportNamesContext importNames() {
			return getRuleContext(ImportNamesContext.class,0);
		}
		public FlaskFromImportStmtContext(ImportStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterFlaskFromImportStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitFlaskFromImportStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitFlaskFromImportStmt(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskImportNamesStmtContext extends ImportStmtContext {
		public TerminalNode IMPORT() { return getToken(MiniFlaskParser.IMPORT, 0); }
		public ImportNamesContext importNames() {
			return getRuleContext(ImportNamesContext.class,0);
		}
		public FlaskImportNamesStmtContext(ImportStmtContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterFlaskImportNamesStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitFlaskImportNamesStmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitFlaskImportNamesStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStmt);
		try {
			setState(98);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				_localctx = new FlaskImportNamesStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(92);
				match(IMPORT);
				setState(93);
				importNames();
				}
				break;
			case FROM:
				_localctx = new FlaskFromImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(94);
				match(FROM);
				setState(95);
				match(IDENT);
				setState(96);
				match(IMPORT);
				setState(97);
				importNames();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportNamesContext extends ParserRuleContext {
		public ImportNamesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importNames; }
	 
		public ImportNamesContext() { }
		public void copyFrom(ImportNamesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskImportNameListContext extends ImportNamesContext {
		public List<TerminalNode> IDENT() { return getTokens(MiniFlaskParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(MiniFlaskParser.IDENT, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MiniFlaskParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MiniFlaskParser.COMMA, i);
		}
		public FlaskImportNameListContext(ImportNamesContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterFlaskImportNameList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitFlaskImportNameList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitFlaskImportNameList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportNamesContext importNames() throws RecognitionException {
		ImportNamesContext _localctx = new ImportNamesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importNames);
		int _la;
		try {
			_localctx = new FlaskImportNameListContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(100);
			match(IDENT);
			setState(105);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(101);
				match(COMMA);
				setState(102);
				match(IDENT);
				}
				}
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RouteDefContext extends ParserRuleContext {
		public RouteDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_routeDef; }
	 
		public RouteDefContext() { }
		public void copyFrom(RouteDefContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskRouteDefinitionContext extends RouteDefContext {
		public TerminalNode AT() { return getToken(MiniFlaskParser.AT, 0); }
		public TerminalNode APP() { return getToken(MiniFlaskParser.APP, 0); }
		public TerminalNode DOT() { return getToken(MiniFlaskParser.DOT, 0); }
		public RouteMethodContext routeMethod() {
			return getRuleContext(RouteMethodContext.class,0);
		}
		public TerminalNode LPAREN() { return getToken(MiniFlaskParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MiniFlaskParser.RPAREN, 0); }
		public TerminalNode NEWLINE() { return getToken(MiniFlaskParser.NEWLINE, 0); }
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public RouteArgsContext routeArgs() {
			return getRuleContext(RouteArgsContext.class,0);
		}
		public FlaskRouteDefinitionContext(RouteDefContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterFlaskRouteDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitFlaskRouteDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitFlaskRouteDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RouteDefContext routeDef() throws RecognitionException {
		RouteDefContext _localctx = new RouteDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_routeDef);
		int _la;
		try {
			_localctx = new FlaskRouteDefinitionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			match(AT);
			setState(109);
			match(APP);
			setState(110);
			match(DOT);
			setState(111);
			routeMethod();
			setState(112);
			match(LPAREN);
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING || _la==IDENT) {
				{
				setState(113);
				routeArgs();
				}
			}

			setState(116);
			match(RPAREN);
			setState(117);
			match(NEWLINE);
			setState(118);
			funcDef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RouteMethodContext extends ParserRuleContext {
		public TerminalNode ROUTE() { return getToken(MiniFlaskParser.ROUTE, 0); }
		public TerminalNode GET() { return getToken(MiniFlaskParser.GET, 0); }
		public TerminalNode POST() { return getToken(MiniFlaskParser.POST, 0); }
		public RouteMethodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_routeMethod; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).enterRouteMethod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MiniFlaskParserListener ) ((MiniFlaskParserListener)listener).exitRouteMethod(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof MiniFlaskParserVisitor ) return ((MiniFlaskParserVisitor<? extends T>)visitor).visitRouteMethod(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RouteMethodContext routeMethod() throws RecognitionException {
		RouteMethodContext _localctx = new RouteMethodContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_routeMethod);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 224L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
